compile_fail_tests/map/more_arrays_than_params.stderr
error: meta-variable `iae` repeats 2 times, but `iip` repeats 1 time
 --> src/map.rs
  |
  |             [$(($iae, $iip, ))*]
  |               ^^^^^^^^^^^^^^^^
